# prototype_crewai

./: bedrock_titan.py  crew.ipynb  crewai_Test.ipynb  crewai_test2.ipynb  crewai_test3.ipynb  pyproject.toml  test.ipynb
test_crew/: README.md  pyproject.toml
test_crew/src/test_crew/: crew.py  main.py
